--- a/views/price.hbs
+++ b/views/price.hbs
@@ -2,25 +2,7 @@
     <header class="no-main">
         <div class="row">
 
-            <div class="xs-hide col-md-5">
-                <ul class="menu">
-                    <li><a href="/about">О платформе</a></li>
-                    <li><a href="/price">Прайс</a></li>
-                    <li><a href="/contacts">Контакты</a></li>
-                </ul>
-            </div>
-            <div class="col-3 col-md-2"><a href="/"><img src="/images/logoS.svg" class="logo-main img-fluid" alt="simple platform"></a></div>
-            <div class="col-md-5 col-9 text-right">
-                <a href="/login" class="btn btn-secondary js-link">Войти</a>
-                <a href="/register" class="btn btn-primary">Регистрация</a>
-                <div class="xs-show">
-                    <div class="menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
+            {{> navbar}}
         </div>
     </header>
     <div class="price-page">
