--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -307,6 +307,9 @@ footer{
 .price-page{
     padding-top: 50px;
 }
+.form-group{
+  padding-bottom: 10px;
+}
 
 ul:not([class]){
     list-style: none;
