--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,16 +2,17 @@
     <div class="logo-login">
         <a href="/"><img src="/images/logoS.svg"></a>
     </div>
-        {{!-- <div class="alert alert-danger" style="margin-top: 30px">Неверный логин или пароль.</div>
-
-
-
-        <div class="mb-3">
-            Вы авторизованы как , <a href="">Выход</a>
-        </div> --}}
+        {{#if error}}
+            <div class="alert alert-danger" style="margin-top: 30px">{{ message}}</div>
+        {{/if}}
+        {{#if isAuth}}
+                <div class="mb-3">
+                    Вы авторизованы как , <a href="">Выход</a>
+                </div>
+        {{else}}
     <div class="form-group">
         <label for="inputUsername">E-mail</label>
-        <input type="email" value="" name="username" id="inputUsername" class="form-control" required autofocus>
+        <input type="email" value="" name="email" id="inputUsername" class="form-control" required autofocus>
     </div>
     <div class="form-group">
         <label for="inputPassword">Пароль</label>
@@ -32,4 +33,5 @@
     <div class="mt-2 text-center">
       <a href="/auth/register">Зарегистрироваться</a>
     </div>
+    {{/if}}
 </form>
