--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -18,7 +18,7 @@
         <label for="inputPassword">Пароль</label>
         <input type="password" name="password" id="inputPassword" class="form-control" required>
     </div>
-    <input type="hidden" name="_csrf_token" value="">
+    <input type="hidden" name="_csrf" value="{{csrf}}">
     
     
     <div class="checkbox mb-3">
