--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -28,7 +28,7 @@
         <label for="inputPhone">Телефон</label>
         <input type="text" name="phone" id="inputPhone" class="form-control" required>
     </div>
-    <input type="hidden" name="_csrf_token" value="">
+    <input type="hidden" name="_csrf" value="{{csrf}}">
     
     
     <div class="checkbox mb-1">
