--- a/views/partials/footer-panel.hbs
+++ b/views/partials/footer-panel.hbs
@@ -2,9 +2,37 @@
                         <div class="col-md-3">
                             <div class="right-status block-style">
                                 <div class="profile">
-                                    <a href="/panel/profile">
-                                        <img src="" class="small-logo">
-                                    </a>
+                                  <div class="row mb-4">
+                                    <div class="col-md-4">
+                                      {{#if shop.logo}}
+                                       <a href="/panel/shop/">
+                                        <img src="/images/logos/{{shop.logo}}" class="img-fluid panel-shop-logo">
+                                       </a>
+                                      {{/if}}
+                                    </div>
+                                    <div class="col-md-8 text-right">
+                                      Статус: <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="circle circle-success"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z" class=""></path></svg>
+                                    </div>
+                                  </div>
+                                  <div class="mb-3">
+                                    Баланс: <strong class="js-price">1234</strong>
+                                  </div>
+                                  <div class="mb-3">
+                                    Тариф: <strong>{{user.tarif_id}}</strong>
+                                  </div>
+                                  <div class="mb-3">
+                                    <h6>Список задач</h6>
+                                    <ul>
+                                      <li><a href="/panel/shop/">Создать Магазин</a></li>
+                                      <li><a href="/panel/shop/">Добавить логотип</a></li>
+                                      <li><a href="/panel/shop/">Выбрать способ доставки и оплаты</a></li>
+                                    </ul>
+                                  </div>
+                                  <div class="mb-3">
+                                    <h6>Последние события</h6>
+                                    Событий нет
+                                  </div>
+                                  
                                 </div>
                             </div>
                         </div>
