Add new logic on add logo and adresses shop and text

--- a/views/partials/footer-panel.hbs
+++ b/views/partials/footer-panel.hbs
@@ -6,7 +6,7 @@
                                     <div class="col-md-4">
                                       {{#if shop.logo}}
                                        <a href="/panel/shop/">
-                                        <img src="/images/logos/{{shop.logo}}" class="img-fluid panel-shop-logo">
+                                        <img src="{{shop.logo}}" class="img-fluid panel-shop-logo">
                                        </a>
                                       {{/if}}
                                     </div>
