--- a/views/partials/footer-panel.hbs
+++ b/views/partials/footer-panel.hbs
@@ -15,10 +15,10 @@
                                     </div>
                                   </div>
                                   <div class="mb-3">
-                                    Баланс: <strong class="js-price">1234</strong>
+                                    Баланс: <strong class="js-price">0</strong>
                                   </div>
                                   <div class="mb-3">
-                                    Тариф: <strong>{{user.tarif_id}}</strong>
+                                    Тариф: <strong>{{tarif.name}} <small>({{tarif.description}})</small></strong>
                                   </div>
                                   <div class="mb-3">
                                     <h6>Ваш QR код</h6>
@@ -83,6 +83,49 @@
   </div>
 </div>
 
+
+<div class="modal fade" id="addCategory" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Добавить новую категорию</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="js-form needs-validation g-3" method="POST" action="">
+
+                <div class="mb-3">
+                    <label for="name" class="form-label">Название категории</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="parent_cat" class="form-label">Родительская категория</label>
+                    <select class="form-select" id="parent_cat" name="parent_cat">
+                        <option value="0" selected>Главная категория</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                   <label for="description" class="form-label">Информация о категории</label>
+                   <textarea class="form-control" id="description" name="description" rows="4"></textarea>
+                </div>
+
+
+
+
+                <input type="hidden" name="_csrf" value="{{csrf}}">
+                <input type="hidden" name="user_id" value="{{userId}}">
+                <input type="hidden" name="shopid" value="{{shop.id}}">
+                <button type="submit" class="btn btn-primary">Сохранить</button>
+            </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="/js/bootstrap.js"></script>
 <script src="/js/inputmask.min.js"></script>
 <script src="/js/qrcode.js"></script>
