--- a/views/panel/shop.hbs
+++ b/views/panel/shop.hbs
@@ -79,7 +79,7 @@
         <form method="POST" action="/panel/shop/add_logo" enctype="multipart/form-data">
           <div class="form-group mb-2">
               <div class="custom-file">
-                  <input type="file" class="custom-file-input" name="logo" id="customFile">
+                  <input type="file" class="custom-file-input" name="file" id="customFile">
                   <label class="custom-file-label" id="js-custom-file-label" for="customFile">Добавить Логотип</label>
               </div>
           </div>
